--- a/pom.xml
+++ b/pom.xml
@@ -56,14 +56,13 @@
   </dependencies>
   
   <build>
-    <pluginManagement>
       <plugins>
         <plugin>
           <artifactId>maven-compiler-plugin</artifactId>
           <version>3.3</version>
           <configuration>
-            <source>1.6</source>
-            <target>1.6</target>
+            <source>1.8</source>
+            <target>1.8</target>
           </configuration>
         </plugin>
         <plugin>
@@ -82,27 +81,55 @@
           <artifactId>maven-jar-plugin</artifactId>
           <version>2.6</version>
         </plugin>
-        	  <plugin>
-	    <groupId>com.github.os72</groupId>
-	    <artifactId>protoc-jar-maven-plugin</artifactId>
-	    <version>3.1.0</version>
-	    <executions>
-	        <execution>
+		<plugin>
+		    <groupId>com.github.os72</groupId>
+		    <artifactId>protoc-jar-maven-plugin</artifactId>
+		    <version>3.1.0.1</version>
+		    <executions>
+		        <execution>
+		            <phase>generate-sources</phase>
+		            <goals>
+		                <goal>run</goal>
+		            </goals>
+		            <configuration>
+		                <protocVersion>3.1.0</protocVersion> <!-- 2.4.1, 2.5.0, 2.6.1, 3.1.0 -->
+		                <inputDirectories>
+		                    <include>src/main/resources/protos</include>
+		                </inputDirectories>
+		                <outputTargets>
+			                <outputTarget>
+				                <type>java</type>
+				                <addSources>none</addSources>
+				                <outputDirectory>src/main/gen</outputDirectory>
+			                </outputTarget>
+		                </outputTargets>
+		            </configuration>
+		        </execution>
+		    </executions>
+		</plugin>
+      </plugins>
+      <pluginManagement>
+      <plugins>
+      	      <plugin>
+	        <groupId>org.codehaus.mojo</groupId>
+	        <artifactId>build-helper-maven-plugin</artifactId>
+	        <executions>
+	          <execution>
+	            <id>add-source</id>
 	            <phase>generate-sources</phase>
 	            <goals>
-	                <goal>run</goal>
+	              <goal>add-source</goal>
 	            </goals>
 	            <configuration>
-	                <protocVersion>3.1.0</protocVersion> <!-- 2.4.1, 2.5.0, 2.6.1, 3.1.0 -->
-	                <inputDirectories>
-	                    <include>src/main/protobuf</include>
-	                </inputDirectories>
+	              <sources>
+	                <source>src/main/gen</source>
+	              </sources>
 	            </configuration>
-	        </execution>
-	    </executions>
-		</plugin>
-        
+	          </execution>
+	        </executions>
+	      </plugin>
+      
       </plugins>
-    </pluginManagement>
+      </pluginManagement>
   </build>  
 </project>
