Changed some protobuf stuff around.

--- a/.classpath
+++ b/.classpath
@@ -33,5 +33,6 @@
 			<attribute name="maven.pomderived" value="true"/>
 		</attributes>
 	</classpathentry>
+	<classpathentry combineaccessrules="false" kind="src" path="/Messaging"/>
 	<classpathentry kind="output" path="target/classes"/>
 </classpath>
