--- a/pom.xml
+++ b/pom.xml
@@ -7,16 +7,22 @@
   <description>This is the security data manager.</description>
  
   <dependencies>
+  	<dependency>
+	    <groupId>com.akmade.messaging</groupId>
+	  	<artifactId>Messaging</artifactId>
+	  	<version>0.0.1-SNAPSHOT</version>
+	</dependency>
+  
 	<dependency>
 		<groupId>org.hibernate</groupId>
 		<artifactId>hibernate-core</artifactId>
 		<version>5.0.5.Final</version>
 	</dependency>	
-<dependency>
-    <groupId>org.slf4j</groupId>
-    <artifactId>slf4j-api</artifactId>
-    <version>1.7.12</version>
-</dependency>
+	<dependency>
+	    <groupId>org.slf4j</groupId>
+	    <artifactId>slf4j-api</artifactId>
+	    <version>1.7.12</version>
+	</dependency>
    <dependency>
        <groupId>org.slf4j</groupId>
        <artifactId>slf4j-simple</artifactId>
@@ -38,21 +44,21 @@
 	    <version>4.12</version>
 	    <scope>test</scope>
 	</dependency>
-<dependency>
-    <groupId>com.google.protobuf</groupId>
-    <artifactId>protobuf-java</artifactId>
-    <version>3.1.0</version>
-</dependency>	
 	<dependency>
-    <groupId>org.reflections</groupId>
-    <artifactId>reflections</artifactId>
-    <version>0.9.10</version>
-</dependency>
-<dependency>
-    <groupId>org.apache.commons</groupId>
-    <artifactId>commons-lang3</artifactId>
-    <version>3.4</version>
-</dependency>
+	    <groupId>com.google.protobuf</groupId>
+	    <artifactId>protobuf-java</artifactId>
+	    <version>3.1.0</version>
+	</dependency>	
+	<dependency>
+	    <groupId>org.reflections</groupId>
+	    <artifactId>reflections</artifactId>
+	    <version>0.9.10</version>
+	</dependency>
+	<dependency>
+	    <groupId>org.apache.commons</groupId>
+	    <artifactId>commons-lang3</artifactId>
+	    <version>3.4</version>
+	</dependency>
   </dependencies>
   
   <build>
@@ -81,55 +87,6 @@
           <artifactId>maven-jar-plugin</artifactId>
           <version>2.6</version>
         </plugin>
-		<plugin>
-		    <groupId>com.github.os72</groupId>
-		    <artifactId>protoc-jar-maven-plugin</artifactId>
-		    <version>3.1.0.1</version>
-		    <executions>
-		        <execution>
-		            <phase>generate-sources</phase>
-		            <goals>
-		                <goal>run</goal>
-		            </goals>
-		            <configuration>
-		                <protocVersion>3.1.0</protocVersion> <!-- 2.4.1, 2.5.0, 2.6.1, 3.1.0 -->
-		                <inputDirectories>
-		                    <include>src/main/resources/protos</include>
-		                </inputDirectories>
-		                <outputTargets>
-			                <outputTarget>
-				                <type>java</type>
-				                <addSources>none</addSources>
-				                <outputDirectory>src/main/gen</outputDirectory>
-			                </outputTarget>
-		                </outputTargets>
-		            </configuration>
-		        </execution>
-		    </executions>
-		</plugin>
       </plugins>
-      <pluginManagement>
-      <plugins>
-      	      <plugin>
-	        <groupId>org.codehaus.mojo</groupId>
-	        <artifactId>build-helper-maven-plugin</artifactId>
-	        <executions>
-	          <execution>
-	            <id>add-source</id>
-	            <phase>generate-sources</phase>
-	            <goals>
-	              <goal>add-source</goal>
-	            </goals>
-	            <configuration>
-	              <sources>
-	                <source>src/main/gen</source>
-	              </sources>
-	            </configuration>
-	          </execution>
-	        </executions>
-	      </plugin>
-      
-      </plugins>
-      </pluginManagement>
   </build>  
 </project>
